feat: proxy campaign delivery management
